<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bakgroun23"
    tools:context=".ApplicationLayer.MainActivity">


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="99dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="100dp"
        android:background="@android:drawable/presence_online"
        android:text="@string/AI"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contactUsBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/contactUsBtn"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_round"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Sport"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="100dp"
        android:background="@color/red"
        android:text="@string/sports"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contactUsBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Clothing"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/holo_purple"
        android:text="@string/clothing"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Daily"
        android:layout_width="153dp"
        android:layout_height="60dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/diy"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/tech"
        android:layout_width="161dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/holo_orange_light"
        android:drawableTint="@color/Green"
        android:text="@string/tech"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contactUsBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/contactUsTxt"
        android:layout_width="407dp"
        android:layout_height="91dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="Welcome To MSMEKarT"
        android:textColor="@color/Green"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="390dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="sans-serif-black"
        android:text="Select the following categories to Browse"
        android:textColor="@color/Green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>